--- a/stylesheets/base/_variable.scss
+++ b/stylesheets/base/_variable.scss
@@ -1,7 +1,11 @@
 $margin: 85px;
+$margin-mobile: 20px;
+$margin-tablet: 60px;
 $margin-side: 170px;
 
 $gnb-height: 85px;
+$gnb-height-mobile: 60px;
+
 
 $grid-1: 99.87% / 6;
 
