--- a/stylesheets/css/class.css
+++ b/stylesheets/css/class.css
@@ -1,24 +1,68 @@
 @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
 @import url("https://fonts.googleapis.com/css?family=Teko:600");
 @font-face { font-family: 'TmonMonsori'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff") format("woff"); font-weight: normal; font-style: normal; }
-@-webkit-keyframes slide-main-appear { 0% { -webkit-transform: translate(-20px, 0); opacity: 0; }
+@-webkit-keyframes main-slide-img { 0% { -webkit-transform: translate(-20px, 0) scale(1.05); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0) scale(1); opacity: 1; } }
+@-moz-keyframes main-slide-img { 0% { -moz-transform: translate(-20px, 0) scale(1.05); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0) scale(1); opacity: 1; } }
+@keyframes main-slide-img { 0% { transform: translate(-20px, 0) scale(1.05); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0) scale(1); opacity: 1; } }
+@-webkit-keyframes main-slide-img__cover { 0% { width: 100%; }
+  100% { width: 0; } }
+@-moz-keyframes main-slide-img__cover { 0% { width: 100%; }
+  100% { width: 0; } }
+@keyframes main-slide-img__cover { 0% { width: 100%; }
+  100% { width: 0; } }
+@-webkit-keyframes sub-slide-img { 0% { -webkit-transform: translate(20px, 0) scale(1.05); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0) scale(1); opacity: 1; } }
+@-moz-keyframes sub-slide-img { 0% { -moz-transform: translate(20px, 0) scale(1.05); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0) scale(1); opacity: 1; } }
+@keyframes sub-slide-img { 0% { transform: translate(20px, 0) scale(1.05); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0) scale(1); opacity: 1; } }
+@-webkit-keyframes ltr-20px { 0% { -webkit-transform: translate(-20px, 0); opacity: 0; }
   50% { opacity: 1; }
   100% { -webkit-transform: translate(0, 0); opacity: 1; } }
-@-moz-keyframes slide-main-appear { 0% { -moz-transform: translate(-20px, 0); opacity: 0; }
+@-moz-keyframes ltr-20px { 0% { -moz-transform: translate(-20px, 0); opacity: 0; }
   50% { opacity: 1; }
   100% { -moz-transform: translate(0, 0); opacity: 1; } }
-@keyframes slide-main-appear { 0% { transform: translate(-20px, 0); opacity: 0; }
+@keyframes ltr-20px { 0% { transform: translate(-20px, 0); opacity: 0; }
   50% { opacity: 1; }
   100% { transform: translate(0, 0); opacity: 1; } }
-@-webkit-keyframes slide-sub-appear { 0% { -webkit-transform: translate(20px, 0); opacity: 0; }
-  50% { opacity: 1; }
-  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
-@-moz-keyframes slide-sub-appear { 0% { -moz-transform: translate(20px, 0); opacity: 0; }
-  50% { opacity: 1; }
-  100% { -moz-transform: translate(0, 0); opacity: 1; } }
-@keyframes slide-sub-appear { 0% { transform: translate(20px, 0); opacity: 0; }
-  50% { opacity: 1; }
-  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes wave-text-cover { 0% { left: 100%; }
+  50% { left: 0; }
+  100% { left: 100%; }
+  0%,100% { border-radius: 0% 0% 0% 0% / 0% 0% 0% 0%; -webkit-transform: translate3d(0, 0, 0) rotateZ(0.01deg) scale(1.5); }
+  34% { border-radius: 10% 0% 0% 54% / 30% 0% 0% 70%; -webkit-transform: translate3d(0, 5px, 0) rotateZ(0.01deg); }
+  50% { -webkit-transform: translate3d(0, 0, 0) rotateZ(0.01deg); }
+  67% { border-radius: 50% 0% 0% 50%/100% 0% 0% 60%; -webkit-transform: translate3d(0, -3px, 0) rotateZ(0.01deg); } }
+@-moz-keyframes wave-text-cover { 0% { left: 100%; }
+  50% { left: 0; }
+  100% { left: 100%; }
+  0%,100% { border-radius: 0% 0% 0% 0% / 0% 0% 0% 0%; -moz-transform: translate3d(0, 0, 0) rotateZ(0.01deg) scale(1.5); }
+  34% { border-radius: 10% 0% 0% 54% / 30% 0% 0% 70%; -moz-transform: translate3d(0, 5px, 0) rotateZ(0.01deg); }
+  50% { -moz-transform: translate3d(0, 0, 0) rotateZ(0.01deg); }
+  67% { border-radius: 50% 0% 0% 50%/100% 0% 0% 60%; transform: translate3d(0, -3px, 0) rotateZ(0.01deg); } }
+@keyframes wave-text-cover { 0% { left: 100%; }
+  49% { left: 0%; }
+  51% { left: 0%; }
+  100% { left: 100%; }
+  0%,100% { border-radius: 30% 0% 0% 30% / 10% 0% 0% 10%; }
+  34% { border-radius: 10% 0% 0% 54% / 30% 0% 0% 70%; }
+  49% { border-radius: 0; }
+  51% { border-radius: 0; }
+  67% { border-radius: 50% 0% 0% 50%/100% 0% 0% 60%; } }
+@-webkit-keyframes num-box { 0% { width: 0%; }
+  100% { width: 1rem; } }
+@-moz-keyframes num-box { 0% { width: 0%; }
+  100% { width: 1rem; } }
+@keyframes num-box { 0% { width: 0%; }
+  100% { width: 1rem; } }
 @-webkit-keyframes dir-appear { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { -webkit-transform: translate(0, 0); opacity: 1; } }
@@ -28,24 +72,12 @@
 @keyframes dir-appear { 0% { transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { transform: translate(0, 0); opacity: 1; } }
-@-webkit-keyframes dir-icon-appear { 0% { -webkit-transform: translate(0, 20px) rotate(180deg); opacity: 0; }
-  50% { opacity: 1; }
-  100% { -webkit-transform: translate(0, 0) rotate(180deg); opacity: 1; } }
-@-moz-keyframes dir-icon-appear { 0% { -moz-transform: translate(0, 20px) rotate(180deg); opacity: 0; }
-  50% { opacity: 1; }
-  100% { -moz-transform: translate(0, 0) rotate(180deg); opacity: 1; } }
-@keyframes dir-icon-appear { 0% { transform: translate(0, 20px) rotate(180deg); opacity: 0; }
-  50% { opacity: 1; }
-  100% { transform: translate(0, 0) rotate(180deg); opacity: 1; } }
-@-webkit-keyframes dir-line { 0% { -webkit-transform: translate(0, 100%); opacity: 0; }
-  50% { opacity: 1; }
-  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
-@-moz-keyframes dir-line { 0% { -moz-transform: translate(0, 100%); opacity: 0; }
-  50% { opacity: 1; }
-  100% { -moz-transform: translate(0, 0); opacity: 1; } }
-@keyframes dir-line { 0% { transform: translate(0, 100%); opacity: 0; }
-  50% { opacity: 1; }
-  100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes loading-bar { 0% { width: 0%; }
+  100% { width: 100%; } }
+@-moz-keyframes loading-bar { 0% { width: 0%; }
+  100% { width: 100%; } }
+@keyframes loading-bar { 0% { width: 0%; }
+  100% { width: 100%; } }
 @-webkit-keyframes letter-appear { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { -webkit-transform: translate(0, 0); opacity: 1; } }
@@ -252,7 +284,31 @@ body { width: 100%; overflow-x: hidden; }
 .container-cost .cost-final .cost-final__result .result-title { font-family: 'NanumSquare', sans-serif; color: #606060; font-size: 2.5rem; width: 100%; display: block; }
 .container-cost .cost-final .cost-final__result .result-money { font-family: 'TmonMonsori'; color: #2ac6ff; margin-top: 1rem; font-size: 4.5rem; margin-bottom: 1rem; width: 100%; display: block; }
 .container-cost .cost-final .cost-final__next { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 10%; margin-top: 2rem; position: relative; }
-.container-cost .cost-final .cost-final__next .next-reset { width: 25%; margin-right: 2%; color: white; background-color: #606060; padding-top: 1.35rem; padding-bottom: 1.35rem; font-size: 1.35rem; text-align: center; cursor: pointer; display: inline-block; position: relative; }
-.container-cost .cost-final .cost-final__next .next-step { width: 73%; color: #2b2b2b; background-color: #f7ff5a; padding-top: 1.35rem; padding-bottom: 1.35rem; font-size: 1.35rem; text-align: center; cursor: pointer; display: inline-block; position: relative; }
+.container-cost .cost-final .cost-final__next .next-reset { width: 25%; margin-right: 2%; color: white; background-color: #606060; padding-top: 1.35rem; padding-bottom: 1.35rem; font-size: 1.35rem; text-align: center; cursor: pointer; display: inline-block; position: relative; font-family: 'NanumSquare', sans-serif; }
+.container-cost .cost-final .cost-final__next .next-step { width: 73%; color: #2b2b2b; background-color: #f7ff5a; padding-top: 1.35rem; padding-bottom: 1.35rem; font-size: 1.35rem; text-align: center; cursor: pointer; display: inline-block; position: relative; font-family: 'NanumSquare', sans-serif; }
+
+@media screen and (min-width: 1025px) and (max-width: 1280px) { .container-class .class-info .class-info__review .info-review-card-list .review-card .card-cont .cont-eval { margin-top: 155%; }
+  .container-cost .cost-wrapper .cost-tab { width: 25%; padding: 3%; }
+  .container-cost .cost-wrapper .cost-tab .cost-tab__option .option .option-input { width: 2.5em; } }
+@media screen and (min-width: 769px) and (max-width: 1024px) { .container .container-content .icon-warpper { width: 100%; padding: 0 16%; }
+  .container .container-content .icon-warpper .icon-tab { width: calc(70% / 3); margin-left: 15%; }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__img { width: 100%; height: 13rem; position: relative; text-decoration: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon { width: 100%; position: absolute; bottom: 0; left: 0; }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon-effect { width: 100%; position: absolute; top: 0; left: 0; }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__img .tab-img__icon-effect.effect { -webkit-animation: icon-effect 0.5s ease infinite; animation: icon-effect 0.5s ease infinite; }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__subtitle { width: 100%; text-align: center; margin-top: 3rem; color: #a5a5a5; font-size: 1rem; word-break: keep-all; display: block; }
+  .container .container-content .icon-warpper .icon-tab .icon-tab__title { width: 100%; text-align: center; color: #606060; font-size: 2rem; margin-top: 1.15rem; font-weight: 700; display: block; }
+  .container-class .class-info .class-info__review .info-review-card-list { width: 123vw; }
+  .container-class .class-info .class-info__review .info-review-card-list .review-card { width: 23%; }
+  .container-class .class-info .class-info__review .info-review-card-list .review-card .card-cont .cont-eval { margin-top: 121%; }
+  .container-class .class-info .class-info__cont .info-cont__text .text-desc { width: 60%; }
+  .container-class .class-info .class-info__cont .info-cont__benefit .benefit-tab { width: 27%; }
+  .container-class .class-info .class-info__cont .info-cont__btn .btn-name { margin-left: 28%; }
+  .container-cost { display: block; }
+  .container-cost .cost-wrapper { width: 100%; }
+  .container-cost .cost-wrapper .cost-tab { width: calc((100% - 4rem) / 3); padding: 3%; margin-right: 0; margin-left: 2rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+  .container-cost .cost-wrapper .cost-tab:nth-of-type(1) { margin-left: 0; }
+  .container-cost .cost-wrapper .cost-tab .cost-tab__option .option .option-input { width: 2.5em; }
+  .container-cost .cost-final { width: 55%; margin-left: 45%; } }
 
 /*# sourceMappingURL=class.css.map */
