--- a/stylesheets/css/footer.css
+++ b/stylesheets/css/footer.css
@@ -39,4 +39,30 @@ body { width: 100%; overflow-x: hidden; }
 .footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip span { width: 100%; height: 2.35rem; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.15rem; line-height: 2.35rem; font-weight: 800; letter-spacing: 0.1rem; z-index: 3; text-align: center; }
 .footer .footer-info .footer-rights { text-align: center; color: white; font-size: 1.15rem; font-family: 'NanumSquare', sans-serif; }
 
+@media screen and (min-width: 769px) and (max-width: 1024px) { .footer .footer-insta .insta-part .insta-tab p { bottom: 4rem; }
+  .footer .footer-insta .insta-part .insta-tab p span { font-size: 1.1rem; padding: 1.1rem 2rem; border-radius: 5rem; }
+  .footer .footer-insta .insta-part .insta-tab p span:hover { background-color: white; color: #2ac6ff; }
+  .footer .footer-insta .insta-part .pic3-wrapper .pic3 p { bottom: 4rem; }
+  .footer .footer-insta .insta-part .pic3-wrapper .pic3 p span { font-size: 1.1rem; padding: 1.1rem 2rem; }
+  .footer .footer-info .footer-logo { width: 9%; }
+  .footer .footer-info .footer-sns { margin-top: 3rem; height: 6rem; } }
+@media screen and (max-width: 768px) { .footer .footer-insta { -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .footer .footer-insta .insta-part { width: 100%; }
+  .footer .footer-insta .insta-part .insta-tab p { bottom: 3rem; }
+  .footer .footer-insta .insta-part .insta-tab p span { font-size: 1.1rem; padding: 1.1rem 2rem; border-radius: 5rem; }
+  .footer .footer-insta .insta-part .insta-tab p span:hover { background-color: white; color: #2ac6ff; }
+  .footer .footer-insta .insta-part .insta-tab.pic1 { width: calc(100vw / 3 * 2); height: calc(100vw / 3 * 2); }
+  .footer .footer-insta .insta-part .insta-tab.pic2 { width: 100vw; height: 50vw; }
+  .footer .footer-insta .insta-part .insta-tab.pic3 { width: 50vw; height: 50vw; }
+  .footer .footer-insta .insta-part .pic3-wrapper { width: calc(100vw / 3); height: calc(100vw / 3 * 2); }
+  .footer .footer-insta .insta-part .pic3-wrapper .pic3 { width: calc(100vw / 3); height: calc(100vw / 3); }
+  .footer .footer-insta .insta-part .pic3-wrapper .pic3 p { bottom: 2rem; }
+  .footer .footer-insta .insta-part .pic3-wrapper .pic3 p span { font-size: 1rem; padding: 0.8rem 1rem; }
+  .footer .footer-insta .insta-part.small { width: 100vw; }
+  .footer .footer-info { padding-top: 7%; padding-bottom: 5%; }
+  .footer .footer-info .footer-logo { width: 20%; }
+  .footer .footer-info .footer-sns { margin-top: 2rem; height: 6rem; }
+  .footer .footer-info .footer-sns .sns-tab { width: 7rem; }
+  .footer .footer-info .footer-sns .sns-tab .sns-tab__icon { width: 3rem; height: 3rem; } }
+
 /*# sourceMappingURL=footer.css.map */
