--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -35,4 +35,14 @@ body { width: 100%; overflow-x: hidden; }
 .header .logo .logo-title { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .header .logo .logo-title img { width: 48%; height: 48%; margin-bottom: 20%; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 
+@media screen and (min-width: 1025px) and (max-width: 1280px) { .header .logo { width: 14vw; } }
+@media screen and (min-width: 769px) and (max-width: 1024px) { .header .logo { width: 18vw; height: 170px; left: 60px; } }
+@media screen and (max-width: 768px) { .header { height: 60px; }
+  .header .gnb { display: none; width: 100%; }
+  .header .nav-mobile { position: absolute; margin-right: 20px; width: 60px; height: 60px; top: 0; right: 0; display: block; cursor: pointer; }
+  .header .nav-mobile img { width: 60%; height: 50%; margin-left: 20%; margin-top: 26%; }
+  .header .logo { width: calc((100% / 6) * 1.6); height: 90px; left: 20px; }
+  .header .logo .logo-symbol img { width: 70%; height: 70%; margin-left: 15%; margin-top: 15%; }
+  .header .logo .logo-title img { width: 60%; height: 60%; margin-bottom: 0; } }
+
 /*# sourceMappingURL=header.css.map */
