--- a/stylesheets/rent.scss
+++ b/stylesheets/rent.scss
@@ -492,9 +492,102 @@ body {
 		}
 	}
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
 
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+.container {
+	.search-wrapper {
+		padding: 3% 12%;
+		.search-title {
+			width: 45%;
+			p {
+				font-size: 3rem;
+				line-height: 1.5;
+			}
+		}
+		.search-date {
+			width: 55%;
+			.search-date__input {
+				width: 60%;
+				.date-input {
+					width: 50%;
+					input {
+						width: 5rem;
+						height: 4rem;
+					}
+					span {
+					}
+				}
+			}
+			.search-date__btn {
+				width: 38%;
+				height: 100%;
+				margin-left: 2%;
+				display: inline-block;
+				span {
+					font-size: 1.35rem;
+					padding: 1.35rem 3rem;
+				}
+			}
+		}
+	}
+	.rent-wrapper {
+		.rent-category {
+			padding: 0;
+			.category-tab {
+				.category-tab__title {
+				}
+				.category-tab__icon {
+				}
+			}
+		}
+		.rent-color {
+			.color-tab {
+				.color-tab__color {
+				}
+			}
+		}
+		.rent-result {			
+			.result-title {
+			}
+			.result-option {
+				.option {					
+				}
+			}
+		}
+		.rent-item-list {
+			.item {
+				.item-img {
+					img {					
+					}
+					.item-img__quickmenu {
+						.quickmenu-tab {
+						}
+					}
+				}
+				.item-info {
+					.info-title {
+					}
+					.info-spec {
+						width: 53%;
+						.info-spec__unit {
+							width: 50%;
+						}
+						.info-spec__value {
+							width: 50%;
+						}
+					}
+				}
+			}
+		}
+		.rent-more {
+			span {
+			}
+		}
+	}
+}
+}
+@media screen and (max-width: 768px) {
+	
 }
