--- a/stylesheets/base/_keyframes.scss
+++ b/stylesheets/base/_keyframes.scss
@@ -165,6 +165,18 @@
   100% { width: 100%; }
 }
 
+@-webkit-keyframes gnb-mobile {
+  0%   { height: 0;}
+  100% { height: 100vh; }
+}
+@-moz-keyframes gnb-mobile {
+  0%   { height: 0;}
+  100% { height: 100vh; }
+}
+@keyframes gnb-mobile {
+  0%   { height: 0;}
+  100% { height: 100vh; }
+}
 
 
 
