--- a/stylesheets/base/css/_keyframes.css
+++ b/stylesheets/base/css/_keyframes.css
@@ -75,6 +75,12 @@
   100% { width: 100%; } }
 @keyframes loading-bar { 0% { width: 0%; }
   100% { width: 100%; } }
+@-webkit-keyframes gnb-mobile { 0% { height: 0; }
+  100% { height: 100vh; } }
+@-moz-keyframes gnb-mobile { 0% { height: 0; }
+  100% { height: 100vh; } }
+@keyframes gnb-mobile { 0% { height: 0; }
+  100% { height: 100vh; } }
 @-webkit-keyframes letter-appear { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { -webkit-transform: translate(0, 0); opacity: 1; } }
