--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -38,8 +38,15 @@ body { width: 100%; overflow-x: hidden; }
 @media screen and (min-width: 1025px) and (max-width: 1280px) { .header .logo { width: 14vw; } }
 @media screen and (min-width: 769px) and (max-width: 1024px) { .header .logo { width: 18vw; height: 170px; left: 60px; } }
 @media screen and (max-width: 768px) { .header { height: 60px; }
-  .header .gnb { display: none; width: 100%; }
-  .header .nav-mobile { position: absolute; margin-right: 20px; width: 60px; height: 60px; top: 0; right: 0; display: block; cursor: pointer; }
+  .header .gnb { display: none; width: 100%; height: 0; position: fixed; z-index: 3; }
+  .header .gnb.mobile-menu { -webkit-animation: gnb-mobile 0.5s ease; animation: gnb-mobile 0.5s ease; height: 100vh; }
+  .header .gnb .gnb-list { -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; margin-left: 0; width: 100%; height: 70%; padding-top: 30%; padding-bottom: 10%; }
+  .header .gnb .gnb-list .gnb-tab { width: 100%; height: calc(100% / 3); }
+  .header .gnb .gnb-list .gnb-tab:nth-of-type(1) { position: relative; top: auto; right: 0; }
+  .header .gnb .gnb-list .gnb-tab:nth-of-type(2) { position: relative; top: auto; right: 0; }
+  .header .gnb .gnb-list .gnb-tab:nth-of-type(3) { position: relative; top: auto; right: 0; }
+  .header .gnb .wave-tab { width: 100%; height: 20%; }
+  .header .nav-mobile { position: absolute; margin-right: 20px; width: 60px; height: 60px; top: 0; right: 0; display: block; cursor: pointer; z-index: 4; }
   .header .nav-mobile img { width: 60%; height: 50%; margin-left: 20%; margin-top: 26%; }
   .header .logo { width: calc((100% / 6) * 1.6); height: 90px; left: 20px; }
   .header .logo .logo-symbol img { width: 70%; height: 70%; margin-left: 15%; margin-top: 15%; }
