--- a/stylesheets/css/index.css
+++ b/stylesheets/css/index.css
@@ -305,13 +305,7 @@ body { width: 100%; overflow-x: hidden; }
   .visual .visual-dir { width: 160px; height: 80px; bottom: calc(30% - 80px); }
   .visual .visual-dir .dir-btn { width: 80px; height: 80px; }
   .visual .visual-dir .dir-btn img { width: 45%; height: auto; margin-left: 27.5%; margin-top: 27.5%; }
-  .container { width: 100%; position: relative; margin-top: 5rem; }
-  .container .container-title { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-  .container .container-title .title-line { width: 100%; height: 8rem; position: relative; }
-  .container .container-title .title-line span { display: block; width: 1px; height: 8rem; background-color: #2b2b2b; opacity: 0; margin-left: 50%; -webkit-transform-origin: center top; -ms-transform-origin: center top; transform-origin: center top; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-  .container .container-title .title-line.appear span { -webkit-animation: title-line 0.5s ease; animation: title-line 0.5s ease; opacity: 1; height: 8rem; }
-  .container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; opacity: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-  .container .container-title .title.appear { -webkit-animation: title 0.5s ease; animation: title 0.5s ease; opacity: 1; }
+  .container .container-title .title { font-size: 2.9rem; margin-top: 2rem; margin-bottom: 5rem; }
   .container .container-content .class-warpper .class-type .class-type__title { font-size: 2rem; margin-top: 0.8rem; }
   .container .container-content .class-warpper .class-type .class-type__btn { font-size: 1.1rem; margin-top: 2.5rem; padding: 1.1rem 3rem; }
   .container .container-content .location-wrapper .location-intro { width: calc((100% / 6) * 5); }
