--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -254,15 +254,39 @@ body {
 	.gnb {
 		display: none;
 		width: 100%;
+		height: 0;
+		position: fixed;
+		z-index: 3;
+		&.mobile-menu {
+			@include animation(gnb-mobile 0.5s ease);
+			height: 100vh;
+		}
 		&.sticky {			
 		}
-		.gnb-list {			
+		.gnb-list {
+			@include flex-direction(column);
+			margin-left: 0;
+			width: 100%;
+			height: 70%;
+			padding-top: 30%;
+			padding-bottom: 10%;
 			.gnb-tab {
+				width: 100%;
+				height: calc(100% / 3);
 				&:nth-of-type(1){
+					position: relative;
+					top: auto;
+					right: 0;
 				}
 				&:nth-of-type(2){
+					position: relative;
+					top: auto;
+					right: 0;
 				}
 				&:nth-of-type(3){
+					position: relative;
+					top: auto;
+					right: 0;
 				}
 				&.current {
 					a {
@@ -277,6 +301,8 @@ body {
 			}
 		}
 		.wave-tab {
+			width: 100%;
+			height: 20%;
 			a {
 				span {
 				}
@@ -294,6 +320,7 @@ body {
 		right: 0;
 		display: block;
 		cursor: pointer;
+		z-index: 4;
 		img {
 			width: 60%;
 			height: 50%;
